# ModularbeitCPP

./: CMakeLists.txt  main.cpp
doc/: Notizen.txt
include/: SinusSensor.h  fileWriter.h  measurement.h  randomSensor.h  scheduler.h  sensor.h  sensorFactory.h
src/: SinusSensor.cpp  fileWriter.cpp  measurement.cpp  randomSensor.cpp  scheduler.cpp  sensor.cpp  sensorFactory.cpp
